--- a/crud/Dockerfile
+++ b/crud/Dockerfile
@@ -1,5 +1,11 @@
+# Etapa 1: Compilar el proyecto
+FROM maven:3.9.6-eclipse-temurin-21 as build
+WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
+
+# Etapa 2: Ejecutar la app
 FROM openjdk:21-jdk-slim
-ARG JAR_FILE=target/crud-0.0.1-SNAPSHOT.jar
-COPY ${JAR_FILE} app_crud_base_de_datos.jar
+COPY --from=build /app/target/*.jar app_crud_base_de_datos.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","app_crud_base_de_datos.jar"]
+ENTRYPOINT ["java", "-jar", "app_crud_base_de_datos.jar"]
