--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=^ma5psD45e#mz(c
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración de JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
