--- a/crud/src/main/resources/application.properties
+++ b/crud/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=rodrigesj500@gmail.com
-spring.mail.password=uyiztykbgyehziue
+spring.mail.username="usuario de gmail"
+spring.mail.password="contraseña"
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
